--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "backend-lucas-lopes-tcc",
   "version": "0.0.1",
   "description": "backend referente a aplicação painel emendas",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "deploy": "serverless deploy"
   },
   "author": "Lucas Lopes de Morais",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.3.3"
+    "nodemon": "^1.3.3",
+    "serverless": "^3.26.0"
   }
 }
