--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.1",
+    "serverless-dotenv-plugin": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.3.3",
-    "serverless": "^3.26.0"
+    "serverless": "^3.26.0",
+    "serverless-offline": "^12.0.4"
   }
 }
