--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "serverless-http": "^3.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.3.3",
-    "serverless-offline": "^12.0.4"
+    "nodemon": "^1.3.3"
   }
 }
